Release 0.0.3
    - handle sub-records of type Native::Packing

Release 0.0.2
    - fixed endian test

Release 0.0.1
    - initial release