@@ -1,5 +1,6 @@
 Release 0.0.3
     - handle sub-records of type Native::Packing
+    - added UInt :offset option to read() and unpack() methods
 
 Release 0.0.2
     - fixed endian test
